[package]
name = "ftw"
version = "0.12.0"
authors = ["Michael Angelo Calimlim <macalimlim@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/macalimlim/ftw"
description = "A CLI tool to manage your godot-rust projects!"
keywords = ["godot", "godot-rust"]
categories = ["command-line-utilities", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", default-features = false }
cargo-generate = { version = "0.17.3", default-features = false, features = [ "vendored-openssl" ] }
clap = { version = "4.0.18", default-features = false, features = [ "cargo", "color", "std" ] }
colored = "2.0.0"
command-macros = "0.2.9"
fs_extra = "1.2.0"
kstring = "2.0.0"
liquid = { version = "0.26.0", default-features = false, features = [ "stdlib" ] }
liquid-core = { version = "0.26.0", default-features = false }
nanoid = "0.4.0"
regex = { version = "1.6.0", default-features = false }
rust-ini = { version = "0.18.0", default-features = false }
serde = "1.0.147"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.37"
toml = "0.5.9"
voca_rs = "1.15.0"
walkdir = "2.3.2"

[dev-dependencies]
assert_cmd = "2.0.5"
nanoid = "0.4.0"
predicates = { version = "2.1.1", default-features = false }
proptest = "1.0.0"

[profile.release]
strip = true
