[package]
name = "ftw"
version = "0.14.0"
authors = ["Michael Angelo Calimlim <macalimlim@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/macalimlim/ftw"
description = "A CLI tool to manage your godot-rust projects!"
keywords = ["godot", "godot-rust"]
categories = ["command-line-utilities", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", default-features = false }
cargo-generate = { version = "0.18.4", default-features = false, features = [ "vendored-openssl" ] }
clap = { version = "4.3.24", default-features = false, features = [ "cargo", "color", "std", "usage" ] }
colored = "2.0.4"
command-macros = "0.2.9"
fs_extra = "1.3.0"
kstring = "2.0.0"
itertools = "0.11.0"
liquid = { version = "0.26.4", default-features = false, features = [ "stdlib" ] }
liquid-core = { version = "0.26.4", default-features = false }
nanoid = "0.4.0"
regex = { version = "1.9.6", default-features = false }
rust-ini = { version = "0.20.0", default-features = false }
serde = "1.0.190"
strum = "0.25.0"
strum_macros = "0.25.3"
thiserror = "1.0.50"
toml = "0.8.6"
voca_rs = "1.15.2"
walkdir = "2.3.3"

[dev-dependencies]
assert_cmd = "2.0.12"
nanoid = "0.4.0"
predicates = { version = "3.0.4", default-features = false }
proptest = "1.3.1"

[profile.release]
strip = true
